LU-18997 lnet: set rc when dev_get_by_index_rcu() fails

The function lnet_sock_create() returns an ERR_PTR so rc needs to
be set to a real error code. This was not happening for the case
when dev_get_by_index_rcu() fails. Set rc to ENODEV.

Fixes: 25ad71fa9e ("LU-17460 lnet: properly handle net_device referencing")
Test-Parameters: trivial testlist=sanity-lnet
Signed-off-by: James Simmons <jsimmons@infradead.org>
Change-Id: Ice08530a41d866c14e84ae37607161c31edab102
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61334
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: Chris Horn <chris.horn@hpe.com>